fixed profile show spacing

--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -77,12 +77,12 @@
 
 }
 
-#resize-smash {
+.resize-smash {
     height: 250px;
     width: 250px;
-    margin-top: 60px;
-    // margin: 0px 20px;
+    padding-top: 200px;
 }
+
 #basic-info {
     height: 100%;
     display: flex;
