--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -8,14 +8,16 @@ a:visited {
 }
 
 #nav-bar {
+    padding-bottom: 20px;
     background-color: black;
     color: white;
     font-family: Raleway, sans-serif;
     display: flex;
-    // padding: 10px;
+    
     padding-left: 10%;
     // border: 1px solid orange;
     align-items: center;
+    
 }
 
 .head-button {
