--- a/app/assets/stylesheets/components/profile_show.scss
+++ b/app/assets/stylesheets/components/profile_show.scss
@@ -113,6 +113,7 @@
     display: flex;
     align-items: flex-end;
     padding-left: 25%;
+    padding-top: 150px;
 }
 
 #name {
