--- a/app/assets/stylesheets/components/search.scss
+++ b/app/assets/stylesheets/components/search.scss
@@ -81,3 +81,7 @@ a {
         // flex-wrap: wrap;
     }
 }
+
+#search-img {
+   margin: 0px; 
+}
